# trading-bot

./: .env.example  .gitignore  AI_PROVIDERS_CONFIGURATION.md  AI_PROVIDER_SETTINGS_PLAN.md  CHART_UX_CHECKLIST.md  CLAUDE.md  IMPLEMENTATION_PLAN.fr.md  IMPLEMENTATION_PLAN.md  LAUNCH.md  MULTI_ACCOUNT_PLAN.md  Makefile  OPTIMIZATION_CHECKLIST.md  README.fr.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0a2cc2461e07_indicators_table.py  1ec3d9e05ff1_add_account_id_to_candles.py  2e2c7d5ffc02_trades_table.py  369b56f79a5d_ai_task_provider_override_table.py  4f5754e79bce_initial_schema.py  7296ba2cc26a_activity_logs_table.py  7879d431d4eb_ai_drafts_and_strategy_versions_tables.py  885996aa6537_add_account_id_to_trades.py  9ae65ef97d1d_add_paused_flag_to_strategy_versions.py  9c1f2a7e5b3d_ai_analysis_reports_and_refinement_proposals.py  a1e2aa0bec8a_symbol_specs_table.py  ab579974226c_add_account_id_to_strategy_versions.py  ad2ce706c70f_add_account_id_to_symbol_specs.py  d6d6e88aac6c_add_account_id_to_activity_logs.py  d8bf8cdc25d0_candles_table.py
backend/scripts/: print_account_gateway_env.py  seed_baseline_strategies.py  seed_pob_indicators.py
backend/scripts/pob_indicators/: pob_blindspot1.py  pob_blindspot2.py  pob_body_candle.py  pob_ck_confluence.py  pob_engulfing.py  pob_hybrid1.py  pob_hybrid2.py  pob_pin_bar.py  pob_qm2p.py  pob_qmc.py  pob_qmm.py  pob_qmr.py  pob_snrc1.py  pob_snrc2.py  pob_swing_structure.py
backend/src/: container.py  main.py
backend/src/backtest/: cli.py
backend/src/indicators/: sandbox.py
gateway/: README.fr.md  README.md  pyproject.toml  run_gateway.py
gateway/src/gateway/: main.py  (+3 more)
gateway/tests/: conftest.py  test_api.py  test_mt5_client.py
(+442 files in other folders)
