[project]
name = "mt5-gateway"
version = "0.1.0"
description = "MT5 gateway — the only code that imports MetaTrader5 (Windows/Wine only)"
requires-python = ">=3.12"
dependencies = [
    "MetaTrader5>=5.0.45; sys_platform == 'win32'",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = false
